--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -43,12 +43,37 @@
         android:hint="Enter address"
         android:inputType="textPersonName" />
 
-    <Button
-        android:id="@+id/btn"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="@color/colorPrimary"
-        android:text="create"
-        android:textColor="#FFFFFF" />
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:paddingTop="10dp">
+
+        <ImageView
+            android:id="@+id/ivhappy"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:clickable="true"
+            android:paddingTop="10dp"
+            app:srcCompat="@drawable/happy" />
+
+        <ImageView
+            android:id="@+id/ivsad"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:clickable="true"
+            android:paddingTop="10dp"
+            app:srcCompat="@drawable/sad" />
+
+        <ImageView
+            android:id="@+id/ivok"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:clickable="true"
+            android:paddingTop="10dp"
+            app:srcCompat="@drawable/ok" />
+    </LinearLayout>
 </LinearLayout>
